--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@ body{
     background-color: hsl(257, 27%, 26%);
 }
 
-@media screen and (max-width:375px) {
+@media only screen and (max-width:600px) {
 
     #navbar-container{
         border-radius: 10px 10px;
@@ -97,7 +97,7 @@ body{
     width: 50%;
 }
 
-@media screen and (max-width:375px) {
+@media only screen and (max-width:600px) {
 
     .hero-container{
         flex-direction: column-reverse;
@@ -215,7 +215,7 @@ body{
     top: -80px;
 }
 
-@media screen and (max-width:375px) {
+@media only screen and (max-width:600px) {
 
     .search-container{
         flex-direction: column;
@@ -379,7 +379,7 @@ body{
     z-index: 1;
 }
 
-@media screen and (max-width:375px) {
+@media only screen and (max-width:600px) {
 
     .bg-grey:nth-of-type(2){
         top: 50px;
@@ -451,7 +451,7 @@ body{
 .footer{
     width: 100%;
     height: 300px;
-    background-color:black;
+    background-color:hsl(260, 8%, 14%);
     color: white;
     padding: 70px 50px;
 }
@@ -489,7 +489,7 @@ body{
     margin: 0 10px;
 }
 
-@media screen and (max-width:375px) {
+@media only screen and (max-width:600px) {
 
     .footer{
         flex-direction: column;
