--- a/src/css/style.css
+++ b/src/css/style.css
@@ -424,7 +424,7 @@ body{
         width: 10px;
         height: 700px;
         top: -1000px;
-        left: 162px;
+        margin: auto;
     }
 }
 
